# goptical-nonsequential

./: CMakeLists.txt
cmake/: gopticalConfig.cmake.in
examples/render/: newton.hpp  x11_app.cpp
examples/render_3d/: newton.hpp  opengl_app.cpp
include/goptical/core/curve/: ConvexQuartic  convex_quartic.hpp  convex_quartic.hxx
src/: CMakeLists.txt
src/core/: CMakeLists.txt  curve_convex_quartic.cpp  curve_flat.cpp  curve_parabola.cpp  curve_sphere.cpp  sys_optical_surface.cpp  sys_surface.cpp  sys_system.cpp
